# LISP-S

./: .gitignore  CMakeLists.txt  Input-with-errors.1.txt  Input-with-errors.2.txt  Nary_node.hpp  README.txt  TreeSumming.cpp  binary_node.hpp  tree.hpp
LISP-S/: LISP-S.sln
LISP-S/LISP-S/: LISP-S.vcxproj  LISP-S.vcxproj.filters
parser/: parser.cpp  parser.hpp
tree/: Nary_node.hpp  Nary_node_pointer.hpp  binary_node.hpp  tree.hpp
